fe,embed: uniform spinners, fix spinner label alignment

--- a/frontend/scss/styles.scss
+++ b/frontend/scss/styles.scss
@@ -324,21 +324,25 @@ dl.detail-table, dl.detail-table > div {
 // Spinners
 //----------------------------------------------------------------------------------------------------------------------
 
+.is-spinning-sm::before, .is-spinning-lg::before {
+    display: inline-block;
+    content: '';
+    background:
+        url("data:image/svg+xml,%3Csvg width='135' height='135' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M80.651 14.018q0 12.273-2.337 23.672-2.047 11.105-4.384 23.088 10.52-5.846 20.75-11.399 10.227-5.552 22.21-9.644l1.753-.584 8.183 24.548-2.339.876q-11.689 4.384-23.38 5.846-11.689 1.169-23.964 2.045 9.646 8.184 18.12 16.073 8.476 7.6 15.783 17.828l1.461 2.045-21.335 14.906-1.168-1.754q-7.013-10.52-12.273-20.75-4.97-10.52-10.23-21.624-5.26 11.105-10.52 21.625Q52.013 111.043 45 121.564l-1.17 1.754-21.334-14.906 1.46-2.045Q31.265 96.14 39.74 88.54q8.474-7.89 18.118-16.073-12.273-.876-23.964-2.045-11.69-1.462-23.378-5.846l-2.339-.876 8.183-24.547 1.753.582q11.983 4.092 22.211 9.646 10.228 5.55 20.75 11.397-2.338-11.983-4.677-23.088-2.045-11.397-2.045-23.672V11.68h26.3z' fill='%23ec8100'/%3E%3C/svg%3E")
+        center/100%
+        no-repeat;
+}
+
 .is-spinning-sm {
     pointer-events: none;
 
     &::before {
-        content: '';
-        display: inline-block;
         width: 1rem;
         height: 1rem;
         margin-left: 0.25rem;
         margin-right: 0.25rem;
         vertical-align: -0.125em;
-        border: 0.2em solid currentColor;
-        border-right-color: transparent;
-        border-radius: 50%;
-        animation: .75s linear infinite spinner-border; // Defined by Bootstrap
+        animation: 1s linear infinite spinner-border; // Defined by Bootstrap
     }
 }
 .is-spinning-lg {
@@ -348,7 +352,6 @@ dl.detail-table, dl.detail-table > div {
 
     // Animated border
     &::before {
-        content: '';
         position: absolute;
         left: 50%;
         top: 50%;
@@ -358,10 +361,7 @@ dl.detail-table, dl.detail-table > div {
         margin-top: -1.5rem;
         box-sizing: border-box;
         z-index: 1000;
-        border: 0.3em solid currentColor;
-        border-right-color: transparent;
-        border-radius: 50%;
-        animation: .75s linear infinite spinner-border; // Defined by Bootstrap
+        animation: 1s linear infinite spinner-border; // Defined by Bootstrap
     }
 
     // Translucent backdrop
@@ -380,7 +380,7 @@ dl.detail-table, dl.detail-table > div {
         content: attr(data-spinner-text);
         text-transform: uppercase;
         display: flex;
-        padding-top: 10%;
+        padding-top: 5rem;
         align-items: center;
         justify-content: center;
         font-size: smaller;
